upgrade to jfx 25.0.2 with workaround